--- a/src/ch11/Makefile.am
+++ b/src/ch11/Makefile.am
@@ -1,9 +1,55 @@
+include $(top_srcdir)/mk/*
+
 AM_CPPFLAGS = \
 	-I$(top_srcdir)
 
 noinst_PROGRAMS = \
-	00_basic 
+	00_basic \
+	01_merge \
+	02_sort \
+	03_sort \
+	04_knn \
+	05_median \
+	06_find \
+	07_fair \
+	08_k_median \
+	09_k_heap \
+	10_k_heap \
+	11_stack_and_queue
+
 
 00_basic_SOURCES = \
 	00_basic.cpp
 
+01_merge_SOURCES = \
+	01_merge.cpp
+
+02_sort_SOURCES = \
+	02_sort.cpp
+
+03_sort_SOURCES = \
+	03_sort.cpp
+
+04_knn_SOURCES = \
+	04_knn.cpp
+
+05_median_SOURCES = \
+	05_median.cpp
+
+06_find_SOURCES = \
+	06_find.cpp
+
+07_fair_SOURCES = \
+	07_fair.cpp
+
+08_k_median_SOURCES = \
+	08_k_median.cpp
+
+09_k_heap_SOURCES = \
+	09_k_heap.cpp
+
+10_k_heap_SOURCES = \
+	10_k_heap.cpp
+
+11_stack_and_queue_SOURCES = \
+	11_stack_and_queue.cpp
